# ecoindex_api

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  README.md  TODO.md  alembic.ini  cli.py  docker-compose.override.yml.dist  docker-compose.yml  docker-compose.yml.dist  dockerfile  fastapi-logging.yml  main.py  openapi.py  pyproject.toml  pytest.ini  requirements.txt  settings.py  tasks.py  test.py
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml
.github/config/: changelog.json  pr-labeler.yml
.github/workflows/: changelog.yml  quality.yml  rapidapi-openapi.yml  update-openapi.yml
api/: helper.py  main.py  middleware.py  models.py
api/application/: exception_handler.py  status.py
api/application/middleware/: analysis.py  cors.py
api/domain/ecoindex/: repository.py  routes.py
api/domain/ecoindex/models/: examples.py  responses.py
api/domain/health/: chromedriver.py  database.py  route.py  routes.py  worker.py
api/domain/host/: repository.py  routes.py
api/domain/host/models/: host.py
api/domain/task/: routes.py
api/domain/task/models/: enums.py  examples.py  response.py
api/ecoindex/db/: ecoindex.py
api/ecoindex/models/: examples.py  responses.py
api/ecoindex/routers/: ecoindex.py
api/host/db/: host.py
api/host/routers/: host.py
api/models/: enums.py  examples.py  responses.py  sort.py
api/routers/: ecoindex.py  host.py
api/statistic/db/: statistic.py
api/statistic/models/: responses.py
api/statistic/routers/: statistic.py
api/statistic/services/: statistic.py
common/: exception.py  helper.py  models.py
db/: crud.py  database.py  engine.py  helper.py  models.py
db/alembic/: env.py
db/alembic/versions/: 7eaafaa65b32_update_url_field_length.py  7eaafaa65b32_update_url_field_type_to_text.py  826abb0c4222_add_ecoindex_version_field.py  e83263a5def4_add_index_id_and_host.py  fd9a1f5662c8_first_migration.py
docker/: entrypoint.sh
docker/api/: dockerfile  entrypoint.sh
docker/worker/: dockerfile  entrypoint.sh
docs/: openapi.json
front/: messaging.py
k8s/: api-deployment.yaml  api-service.yaml  db-backup-deployment.yaml  db-deployment.yaml  db-service.yaml  dbbackup-persistentvolumeclaim.yaml
tests/: populate_data.py
tests/api/: test_middleware.py
tests/api/domain/health/: test_chromedriver.py
tests/api/models/: test_responses.py
worker/: exceptions.py  repository.py  tasks.py
