[tool.poetry]
name = "ecoindex_api"
version = "2.6.0"
description = "REST API to expose Ecoindex"
authors = ["Vincent Vatelot <vincent.vatelot@ik.me>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.10.4"
celery = "^5.2.7"
ecoindex-scraper = {version = "^2.18.0", allow-prereleases = true}
sqlmodel = "^0.0.8"
redis = "^4.5.4"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}

[tool.poetry.group.api.dependencies]
fastapi = "^0.95.1"
fastapi-health = "^0.4.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
aiosqlite = "^0.19.0"
exceptiongroup = "^1.1.0"
Faker = "^18.6.0"
faker-enum = "^0.0.2"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.9.0"
tomli = "^2.0.1"
typer = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
