[tool.poetry]
name = "ecoindex_api"
version = "3.1.1"
description = "REST API to expose Ecoindex"
authors = ["Vincent Vatelot <vincent.vatelot@ik.me>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.10.4"
celery = "^5.3.1"
ecoindex-scraper = "^3.2.0"
sqlmodel = "^0.0.8"
redis = "^4.6.0"
pydantic = {extras = ["dotenv"], version = "^1.10.11"}

[tool.poetry.group.api.dependencies]
fastapi = "^0.99.1"
fastapi-health = "^0.4.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
aiosqlite = "^0.19.0"
exceptiongroup = "^1.1.0"
Faker = "^18.11.2"
faker-enum = "^0.0.2"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.9.0"
tomli = "^2.0.1"
typer = "^0.9.0"
ruff = "^0.0.284"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E402"]